# ProjectFolder

./: .gitignore  Readme.md  git.sh  program  wsl_init.sh
ARM/Reference_Material/: url.txt
ARM/STM32CubeIDE/FPGA_SYSTEM/: .cproject  .mxproject  .project  FPGA_SYSTEM.ioc  STM32F429VITX_FLASH.ld  STM32F429VITX_RAM.ld
ARM/STM32CubeIDE/G0B1E/: .cproject  .mxproject  .project  G0B1E.ioc
ARM/STM32CubeIDE/GamePad/: .gitignore
ARM/STM32CubeIDE/I2S_F429_LQFP144/: .cproject  .mxproject  .project  I2S_F429_LQFP144.ioc
ARM/STM32CubeIDE/SPI_TFT/: .cproject  .mxproject  .project  SPI_TFT.ioc
ARM/STM32CubeIDE/STM32G0M/: .cproject  .mxproject  .project  STM32G031J6MX_FLASH.ld  STM32G0M.ioc
ARM/STM32CubeIDE/TFT_Display/: .cproject  .mxproject  .project  TFT_Display.ioc
Efinix/: Readme.md
Efinix/Block_RAM_Wrapper-v1.1/source/: bram_wrapper_mwm.v  efx_mem_decompose_script.py  efx_mem_init_script.py
Efinix/Block_RAM_Wrapper-v1.1/testbench_sdpram/: bram_decompose.vh  bram_ini.vh  (+4 more)
Efinix/Titanium/: .gitignore
Efinix/Trion/TryPad_v1/RP2040/: .gitignore  CMakeLists.txt  Readme.md  fpga.py
Efinix/Trion/TryPad_v1/RP2040/MicroPico/: main.py  st7789.py  timer.py  usb.py
Efinix/Trion/TryPad_v1/RP2040/python/: reg_write.txt  serial_Trypad.py  serial_test.py
Efinix/Trion/TryPad_v1/RP2040/src/: Mflash.c  MflashPico.c  MflashPico.h  Mgpio.c  Mgpio.h  Mpsram.c  Mpsram.h  Mpsrram.c  Mspi.c  Mspi.h  Mtimer.c  Mtimer.h  Musb.c  Musb.h  Mvideo.c  Mvideo.h  main.c  trypad.h  trypad_fpga_macro.h
Efinix/Trion/TryPad_v1/RP2040/src/BraveFrontier/: brave_frontier.c  brave_frontier.h
Efinix/Trion/TryPad_v1/RP2040/src/old/: Mflash.h
Efinix/Trion/TryPad_v1/RP2040/teraterm/: reg_write.txt  write.ttl
Gimp/: rev.xcf  ロゴ.xcf
Intel/: readme.txt
Markdown/: App.md  CODING.md  GitPass.md  Settings.md  UbuntuError.md  vivado.md
Markdown/App/: audacity.md
Markdown/zenn/: EfinityLED点滅.md  Efinix環境構築.md
Markdown/ブログ/: T120.md
Music/: readme.txt
Music/res/: Makefile  export.c  program  readme.txt  xxd_cmd.txt
RaspberryPi/: Makefile  ping.bat  readme.txt  vim.txt
RaspberryPi/Pico/: .gitignore  main.py
RaspberryPi/Pico/sample/: CMakeLists.txt  main.c
Reference/Z_Pico/: https___qiita-image-store.s3.ap-northeast-1.amazonaws.com_0_716263_d46e5c9e-a53f-1d65-90ee-3cfb186091c5.avif
Toho_Project/: Makefile
Toho_Project/include/: DRAW.H
Toho_Project/posdata/: img.txt
Toho_Project/src/: game.c  main.c
Toho_Project/tool/: DRAW.H  MAPCHIP.H  MAPCHIP_ID.H  Makefile  TERMINAL.H  dainarisyounari.c  debug  debug.c  file.c  id.c  iddefine.txt  mapchip.c  png.c  program  sdl.c  terminal.c  typedef_file.c  typedef_read_file.c  url.txt
Ubuntu/: Readme.md
Ubuntu/C_sample/: Makefile
Ubuntu/TohoProject_for_Linux/: Makefile  Readme.md  readme.txt
Ubuntu/Verilog/: freq.c
Ubuntu/rpg/: Makefile
VisualStudio/: .gitignore
VisualStudio/MapchipCreate/: .gitignore  Main.cpp
Waveform/: Readme.md  sample.yml
Xilinx/workspace/: Readme.md
include/: DISPLAY.H  FUNCTION.H  KEY.H  MAPCHIP.H  MAPCHIP_DB.h
python/: filename_trans.py  test.py
python/sample/: hello.py
src/: file.c  main.c  main.su  mapchip.c  region.c  terminal.c
toho_rpg/: Makefile  readme.txt
toho_rpg/include/: DEBUG.H  DRAW.H  FILE.H  KEYBOARD.H  LIB.H  MODE.H  PARA.H  TIMER.H
toho_rpg/src/: debug.c  draw.c  file.c  keyboard.c  main.c  mode.c  timer.c
toho_rpg/tool/: Makefile  event.txt  pos_printf.c  ppm.c  program
(+7060 files in other folders)
